--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 Django==5.2
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
@@ -12,4 +13,3 @@ PyYAML==6.0.2
 sqlparse==0.5.3
 tzdata==2025.2
 uritemplate==4.1.1
-whitenoise   
