--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ sqlparse==0.5.3
 tzdata==2025.2
 uritemplate==4.1.1
 whitenoise==6.9.0
-#django-extensions
-#torch
-#clip-anytorch
-#pandas
-#numpy
+django-extensions
+torch
+clip-anytorch
+pandas
+numpy
